Added support for a dark/light mode toggle (hidden)

--- a/main.css
+++ b/main.css
@@ -11,3 +11,19 @@
     position: absolute; 
     font-size: 10px;
 }
+
+/* body {
+    background-color: white;
+    color: black;
+    }
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+#toggle {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+} */
