--- a/main.css
+++ b/main.css
@@ -8,9 +8,10 @@ body {
 }
 
 .content {
-  margin: 2% 20% 2% 20%;
+  margin: 1% 20% 1% 20%;
   font-family: "sans-serif";
   position: relative;
+  display: inline-block;
 }
 
 .cornerText {
@@ -41,6 +42,7 @@ a:hover {
 }
 
 .skill-set {
-  float: left;
-  width: 50%;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10%;
 }
