--- a/main.css
+++ b/main.css
@@ -14,25 +14,24 @@ body {
   display: inline-block;
 }
 
-.cornerText {
+footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   font-family: "monospace";
-  position: absolute; 
   font-size: 10px;
 }
 
-#cornerTextLeft {
+#modeToggle {
   cursor: pointer; 
 }
 
 .dark-mode {
   background-color: black;
   color: white;
-}
-
-#toggle {
-  position: absolute;
-  top: 1%;
-  right: 1%;
 }
 
 a {
