--- a/main.css
+++ b/main.css
@@ -66,10 +66,11 @@ a:hover {
   transform: translateX(-50%);
   
   /* sizing */
-  padding: 4px 4px;
-  border-radius: 4px;
+  padding: 6px 6px;
+  border-radius: 8px;
 
   /* text */
+  font-family: "sans-serif";
   font-size: 12px;
   white-space: nowrap;
 
@@ -79,7 +80,7 @@ a:hover {
   pointer-events: none;
 
   /* coloring */
-  background-color: #333;
+  background-color: #000c; /* black with about 75% opacity */
   color: #fff;
 }
 
