--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
   --text-color: #000000;
   --link-color: #007acc;
   --link-hover-color: #3498db;
-  --tooltip-background-color: rgba(0, 0, 0, 0.8);
+  --tooltip-background-color: rgba(0, 0, 0);
   --tooltip-text-color: #ffffff;
 }
 
@@ -16,7 +16,7 @@
   --text-color: #ffffff;
   --link-color: #007acc;
   --link-hover-color: #3498db;
-  --tooltip-background-color: rgba(255, 255, 255, 0.8);
+  --tooltip-background-color: rgba(255, 255, 255);
   --tooltip-text-color: #000000;
 }
 
