--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-@import "https://www.nerdfonts.com/assets/css/webfont.css";
-
 :root {
   color-scheme: light;
   --background-color: #ffffff;
@@ -9,6 +7,7 @@
   --tooltip-background-color: rgba(0, 0, 0);
   --tooltip-text-color: #ffffff;
   --font-size-base: 1rem;
+  --icon-filter: none;
   /* todo: clamp base font size for fluid scaling */
 }
 
@@ -20,6 +19,7 @@
   --link-hover-color: #3498db;
   --tooltip-background-color: rgba(255, 255, 255);
   --tooltip-text-color: #000000;
+  --icon-filter: invert(1);
 }
 
 @media (max-width: 768px) {
@@ -34,7 +34,6 @@ body {
   margin: 1% 20% 1% 20%;
   font-family: "sans-serif";
   position: relative;
-  display: inline-block;
   font-size: var(--font-size-base);
 }
 
@@ -77,9 +76,27 @@ footer p {
   cursor: pointer; 
 }
 
+/* todo: delete */
 .dark-mode {
   background-color: black;
   color: white;
+}
+
+.icon-wrapper {
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+
+.icon-image {
+  width: 1em;
+  height: 1em;
+  display: block;
+  filter: var(--icon-filter);
+}
+
+.icon-wrapper.icon-large .icon-image {
+  width: 1.25em;
+  height: 1.25em;
 }
 
 a {
@@ -133,8 +150,4 @@ a:hover {
 
 .tooltip-trigger:hover::after {
   opacity: 1;
-}
-
-.icon-large {
-  font-size: calc(var(--font-size-base) * 1.25);
 }
